# repoforge

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PLACEMENT.md  README.md  SECURITY.md  SOURCE_MANIFEST.sha256  VISION.md  config.example.toml  config.local-dev.toml  config.repoforge.toml  config.work-frontier.toml  pyproject.toml  repoforge-onboarding-tui-complete.patch
.github/ISSUE_TEMPLATE/: config.yml  implementation-ticket.yml  initiative.yml
.github/workflows/: ci.yml  production-gate.yml
docs/: CHATGPT_SETUP.md  CONFIGURATION.md  DEVELOPMENT.md  FULL_FLOW_TESTING.md  README.md  REPOSITORY_DISCOVERY.md  TESTING.md  TOOL_REFERENCE.md
docs/architecture/: phase6-operational-hardening.md  phase7-atomic-hot-reload.md  phase8-program-completion.md  root-module-cleanup.md
docs/audit/: forge-v1-tooling-audit-2026-07-16.md
docs/contracts/: README.md  release-contract-v1.json  release-contract-v2.json  tool-schemas-v2.json
docs/development/: DEVELOPMENT.md  DURABLE_STATE_LIFECYCLE.md  INTEGRITY_POLICY.md  REQUIREMENT_EVOLUTION.md  SECRET_SAFE_EGRESS.md  TICKET_GOVERNANCE.md  TOOL_REFERENCE.md
docs/getting-started/: CHATGPT_SETUP.md  INTERACTIVE_ONBOARDING.md  README.md
docs/guides/: STARTER_PROMPTS.md
docs/operations/: GITHUB_WEBHOOKS.md  TICKET_PROJECT_SYNC.md
docs/plans/: 2026-07-22-test-suite-performance-epic.md  engineering-context-control-plane-2026-07-17.md  repoforge-production-architecture-tunnel-plan.md
docs/roadmaps/: 2026-07-17-foundation-reconciliation.md  REPOFORGE_MASTER_ROADMAP.md  REPOFORGE_TICKET_GRAPH.json
docs/superpowers/plans/: 2026-07-13-root-module-cleanup.md  2026-07-14-durable-operation-task.md  2026-07-14-guided-onboarding-implementation.md  2026-07-14-interactive-onboarding-ui.md  2026-07-14-issues-61-15-62-71-batch.md  2026-07-14-pr-check-watch.md  2026-07-14-repository-commit-comparison-evidence.md  2026-07-14-repository-snapshot-inspection.md  2026-07-14-structured-ci-failure-evidence.md  2026-07-14-typed-diagnostic-profiles.md  2026-07-14-workflow-record-replay.md  2026-07-14-workspace-assessment.md  2026-07-14-workspace-base-refresh.md  2026-07-15-onboarding-patch-reliability-batch.md  2026-07-16-control-plane-foundations-and-runtime-hardening.md  2026-07-17-forge-v2-epic-180.md  (+19 more)
docs/testing/: FULL_FLOW_TESTING.md  PLUGIN_TEST_CASES.md  TESTING.md  TEST_RUN_RECORD.md  program-completion-matrix.md
scripts/: bootstrap-macos.sh  build_coverage_map.py  check_release_contracts.py  e2e-preflight.sh  generate_tool_schemas.py  inspect-mcp.sh  pre-push.sh  release.sh  rollback_drill.py  run-tunnel.sh  run_control_plane_gates.py  run_test_shards.py  run_v2_release_gates.py  select_affected_tests.py  test-all.sh  v2_release_reference.py  validate_ticket_graph.py  verify-agent.sh  verify-production.sh  verify-wheel-e2e.py  verify-wheel-install.sh
src/repoforge/: __init__.py  __main__.py  audit.py  bootstrap.py  bootstrap_merge_impl.py  cli.py  config.py  config_delta.py  discovery.py  errors.py  extended_bootstrap.py  onboarding.py  ports.py  proposal.py  runner.py  runtime.py  runtime_worker.py  security.py  server.py  service.py  state.py  user_config.py  workspace_apply_patch.py  workspace_create.py  workspace_file_read.py  workspace_file_write.py  workspace_replace_text.py
tests/: conftest.py  coverage-map.json  test-groups.toml  test_adhoc_command_guard.py  test_adoption_nudges.py  test_audit_cursor.py  test_audit_query.py  test_background_run_profile.py  test_bootstrap_factories.py  test_ci_failure_evidence.py  test_cli_command_bodies.py  test_cli_runtime_commands.py  test_cli_surface_coverage.py  test_client_capabilities.py  test_code_intelligence.py  test_code_intelligence_integration.py  test_command_executor_error_codes.py  test_command_source_integrity.py  test_compatibility_facades.py  test_config.py  test_config_admin.py  test_config_cli.py  test_config_delta.py  test_config_presets.py  test_configuration_paths.py  test_discovery_cli.py  test_docs_command_drift.py  test_doctor_github_capabilities.py  test_domain_config_generation_delta.py  test_durable_state.py  test_evidence_model.py  test_execution_environment.py  test_execution_identity.py  test_execution_plans.py  test_failure_intelligence.py  test_fingerprint_cache.py  test_github_capability_probe.py  test_github_read_cache.py  test_github_ticket_graph_adapter.py  test_github_ticket_project_adapter.py  (+120 more)
(+424 files in other folders)
