[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "repoforge-mcp"
version = "2.2.0"
description = "Safe local Git workspaces and draft PRs for ChatGPT"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "RepoForge contributors" }]
keywords = ["mcp", "chatgpt", "git", "github", "worktree", "coding-agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "inquirerpy>=0.3.4,<1",
  "mcp==1.28.1",
  "pydantic>=2.13,<3",
  "rich>=13,<15",
  "tomli>=2.2.1",
  "tree-sitter==0.25.2",
  "tree-sitter-javascript==0.25.0",
  "tree-sitter-python==0.25.0",
  "tree-sitter-typescript==0.23.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<2",
  "pytest-cov>=6,<8",
  "pytest-timeout>=2.3,<3",
  "pytest-xdist>=3.6,<4",
  "ruff>=0.11,<1",
  "mypy>=1.15,<2",
  "types-PyYAML>=6,<7",
]

[project.scripts]
repoforge = "repoforge.interfaces.cli.main:main"
rf = "repoforge.interfaces.cli.main:main"
repoforge-mcp = "repoforge.interfaces.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/repoforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# --timeout=120 matches the app's own default git subprocess budget
# (ServerConfig.default_command_timeout_seconds). A lower pytest ceiling (was
# 60) inverted the layering: pytest killed git calls that the app itself still
# considered healthy, producing false "Timeout (>60s)" failures under xdist
# contention. 120 is time-neutral for passing tests (test git ops are
# sub-second on the tiny demo repo) and still catches real hangs in ~2 min.
addopts = "-q --strict-markers --timeout=120"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["repoforge"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["repoforge"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
